--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@capacitor/cli": "1.2.1",
     "@ionic/angular-toolkit": "~2.0.0",
     "@ionic/app-scripts": "^3.2.4",
+    "@ionic/lab": "2.0.13",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
