--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@capacitor/android": "^1.2.1",
     "@capacitor/core": "1.2.1",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file-chooser": "^5.17.0",
+    "@ionic-native/file-transfer": "^5.17.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
